--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,10 @@ body {
   border: none;
   padding: 10px;
   cursor: pointer;
+  bottom: center;
+  align-content: center;
+  position: relative;
+  bottom: -525px;
 }
 .cats {
   display: flex;
@@ -25,4 +29,18 @@ body {
 img {
   max-width: 700px;
   height: 30rem;
+}
+.Title {
+  color: white;
+  position: relative;
+  text-align: center;
+  font-size: 20px;
+  top: -500px;
+}
+.Description {
+  font-size: 15px;
+  color: white;
+  position: relative;
+  text-align: center;
+  top: 10px;
 }
